# RoundedWindow

RoundedWindow/: CMakeLists.txt  Main.qml  icon.rc  main.cpp  res.qrc
RoundedWindow/cpp/: screenhandler.cpp  screenhandler.h  windowshape.cpp  windowshape.h
RoundedWindow/js/: Alpha.js
RoundedWindow/qml/: CreateMainWindow.qml  OptionsMenu.qml  Rect.qml  ResizeHandler.qml  SnapBar.qml  SnapHandler.qml  SnapLayers.qml  SnapTopLayers.qml  Window.qml  WindowHandler.qml
